--- a/VCEventEase/Views/Bookings/Edit.cshtml
+++ b/VCEventEase/Views/Bookings/Edit.cshtml
@@ -5,7 +5,8 @@
 
 <style>
     body {
-        background: linear-gradient(to bottom, black, blue);
+        background: linear-gradient(to bottom, black, grey);
+        min-height: 100vh;
         min-height: 100vh;
     }
 
